# Hive-engine

./: .gitignore  CMakeLists.txt  README.md  Trainer.py  build.sh
include/: Hive  Hive.h  HiveAI  HiveEngine  decorators.hpp  exceptions.hpp  nnue.h  version.h
include/engine/: alfabeta.hpp  bestmove.hpp  evaluations.hpp  transpositionTable.hpp
include/hive/: board.hpp  coordinates.hpp  game.hpp  gamecontroller.hpp  moves.hpp  namespaces.hpp  pieces.hpp  protocol.hpp  zobrist.hpp
include/nnue/: FullyConnected.hpp  accumulator.hpp  activations.hpp  layer.hpp  loss.hpp  model.hpp  ndarray.hpp  sequential.hpp
src/: main.cpp  nnue.cpp  trained_nnue.cpp
src/engine/: CMakeLists.txt  alfabeta.cpp  evaluations.cpp  transpositionTable.cpp
src/hive/: CMakeLists.txt  board.cpp  board.tpp  coordinates.cpp  game.cpp  gamecontroller.cpp  gamecontroller.tpp  moves.cpp  pieces.cpp  protocol.cpp  zobrist.cpp
src/hive/board/: CMakeLists.txt
src/hive/pieces/: CMakeLists.txt  pieces.cpp
src/nnue/: CMakeLists.txt  FullyConnected.cpp  activations.cpp  loss.cpp  ndarray.cpp  sequential.cpp
test/: test.cpp
